fixed control buttons layout on mobile

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -60,16 +60,30 @@
                     margin-right: 10px;
                 }
 
+                @media ( max-width: 440px ){
+                    margin-right: 5px;
+                    height: 84px;
+                }
+
+
             }
             .fc-move-post{
                 border-width: 1px;
                 height: inherit;
                 box-sizing: border-box;
 
+                @media ( max-width: 440px ){
+                    padding: 5px;
+                }
+
                 p{
                     position: relative;
                     top: 5px;
                     font-weight: 500;
+
+                    @media ( max-width: 440px ){
+                        font-size: 12px;
+                    }
                 }
             }
         }
