--- a/style.css
+++ b/style.css
@@ -1848,15 +1848,31 @@ thead.fc-border th:last-child {
     margin-right: 10px;
   }
 }
+@media (max-width: 440px) {
+  .fencing-modal--v2 .fencing-modal-area--gate .fc-col-flex {
+    margin-right: 5px;
+    height: 84px;
+  }
+}
 .fencing-modal--v2 .fencing-modal-area--gate .fc-move-post {
   border-width: 1px;
   height: inherit;
   box-sizing: border-box;
 }
+@media (max-width: 440px) {
+  .fencing-modal--v2 .fencing-modal-area--gate .fc-move-post {
+    padding: 5px;
+  }
+}
 .fencing-modal--v2 .fencing-modal-area--gate .fc-move-post p {
   position: relative;
   top: 5px;
   font-weight: 500;
+}
+@media (max-width: 440px) {
+  .fencing-modal--v2 .fencing-modal-area--gate .fc-move-post p {
+    font-size: 12px;
+  }
 }
 @media (max-width: 992px) {
   .fencing-modal--v2 .fencing-modal-area[data-field=image_option] {
@@ -3089,6 +3105,16 @@ thead.fc-border th:last-child {
   .fencing-panel-controls .btn-fc {
     width: 49%;
     margin-right: 2%;
+  }
+}
+@media (max-width: 600px) {
+  .fencing-panel-controls .btn-fc {
+    padding: 12px 8px;
+  }
+}
+@media (max-width: 340px) {
+  .fencing-panel-controls .btn-fc {
+    padding: 12px 3px;
   }
 }
 @media (max-width: 768px) {
